--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -16,6 +16,7 @@
 
   padding: 16px;
   border-radius: 4px;
+  box-sizing: border-box;
 }
 .title {
   font-family: "Teko";
