--- a/src/ui/TextInput/TextInput.css
+++ b/src/ui/TextInput/TextInput.css
@@ -9,6 +9,7 @@
   text-align: left;
   padding-left: 7px;
   padding-right: 7px;
+  box-sizing: border-box;
 }
 .TextInput__input:hover {
   cursor: pointer;
